brain/sources/prod-metadata/objects/Zoom_Portal_Config__mdt/Zoom_Portal_Config__mdt.object-meta.xml
<CustomObject>
    <label>Zoom Portal Config</label>
    <pluralLabel>Zoom Portal Configs</pluralLabel>
</CustomObject>