brain/sources/prod-metadata/objects/Zoom_Portal_Config__mdt/fields/Allowed_File_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Allowed_File_Extensions__c</fullName>
    <defaultValue>&quot;mp4,webm,mov,mkv&quot;</defaultValue>
    <label>Allowed File Extensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>