brain/sources/prod-metadata/objects/Zoom_Portal_Config__mdt/fields/AWS_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Access_Key__c</fullName>
    <description>AWS access key for S3 V4 signing</description>
    <label>AWS Access Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>