brain/sources/prod-metadata/objects/Zoom_Portal_Config__mdt/fields/AWS_Region__c.field-meta.xml
<CustomField>
    <fullName>AWS_Region__c</fullName>
    <label>AWS Region</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>