brain/sources/prod-metadata/objects/Zoom_Portal_Config__mdt/fields/S3_Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>S3_Bucket_Name__c</fullName>
    <label>S3 Bucket Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>