brain/sources/prod-metadata/objects/Zoom_Portal_Config__mdt/fields/Signed_URL_Expiry_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Signed_URL_Expiry_Minutes__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Signed URL Expiry Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>