brain/sources/prod-metadata/objects/Zoom_Portal_Config__mdt/fields/Site_Title__c.field-meta.xml
<CustomField>
    <fullName>Site_Title__c</fullName>
    <label>Site Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>