brain/sources/prod-metadata/objects/Zoom_Portal_Config__mdt/fields/Top_Notice__c.field-meta.xml
<CustomField>
    <fullName>Top_Notice__c</fullName>
    <label>Top Notice</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>